--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WelcomeActivity"></activity>
-        <activity android:name=".HomeActivity"
-            android:theme="@style/NoActionBarTheme">
-        </activity>
+        <activity android:name=".CocktailsListView"></activity>
+        <activity android:name=".WelcomeActivity" />
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/NoActionBarTheme"></activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoActionBarTheme">
