create an up button with a heirachical parent between the welcome activity and the main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CocktailsListView"></activity>
-        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".CocktailsListView">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.cocktail.WelcomeActivity">
+            </meta-data>
+        </activity>
+        <activity android:name=".WelcomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.cocktail.HomeActivity">
+            </meta-data>
+        </activity>
         <activity
             android:name=".HomeActivity"
             android:theme="@style/NoActionBarTheme"></activity>
